package com.android.dailycat.ui.screens.navigation

enum class NavigationEnums {
    ABOUT;

    enum class APP {
        DISCOVER,
        FAVORITES
    }

}
