...
        Feed(catPosts = list) {} // Should not need to fetch since we'll be providing all favorite posts!
    else Column(
        Modifier.fillMaxSize(),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        Text(text = "You don't have any favorites yet!")
    }
}

/**
 * Preview function for displaying the 'No Favorites Yet' message.
 *
...
