...
        Modifier
            .fillMaxWidth()
            .zIndex(5f),
        horizontalAlignment = Alignment.End,
        verticalArrangement = Arrangement.Center
    ) {
        IconButton(modifier=Modifier.testTag("Favorite") ,onClick = onFavoriteClick) {
            if (catPost.favorite) {
                Icon(Icons.Default.Star, contentDescription = "Remove from favorites")
            } else {
                Icon(Icons.Default.StarBorder, contentDescription = "Add to favorites")
            }
        }
...
